fep2, draft one